# AudioVerse

./: EQ.html  MIDI_Daw_With_Ideas.html  Main.cpp  Notes.html  PROJECT_NAVIGATION.md  Piano Tiles.html  PianoTilesMidiGame.html  README.md  Reaper Notes Website3.html  Reascript Lua webpage (1).html  Reascript Lua webpage2.html  TerminalCommands.txt  WASM_INTEGRATION_COMPLETE.md  Wavetable_Synth.html  WebAudioDAWTools.html  autotyper.py  chromebook_daw_advanced.html  devlog  drag_drop_code_builder.html  index.js  index.wasm  lorem_output_random.txt  main.js  style.css  test-wasm.html  test_emscripten.cpp  test_emscripten.html  test_emscripten.js  test_standalone.js  test_standalone.wasm
.devcontainer/: devcontainer.json
AudioVerse/: DAW.js  DAWstyling.css  FXPlugins.js
Chromebook_DAW/: AudioVerse.html  DAW.js  DAWstyling.css  FXPlugins.js  MIDI_Daw_With_Ideas.html  audioedit.js  chromebook_daw.html  edit.js  record.js  time.js  track.js  transport.js
Chromebook_DAW_React/: README.md  index.html  package-lock.json  package.json  vite.config.ts
Chromebook_DAW_React/public/: DAWstyling.css  FXPlugins.js
Chromebook_DAW_React/src/: App.tsx
cpp-daw/: CMakeLists.txt
cpp-daw-web/: AudioVerseCPP.html  AudioVerseEnhanced.html  ENHANCEMENT_SUMMARY.md  README.md  advanced_cpp_daw.cpp  advanced_cpp_daw.js  advanced_cpp_daw.wasm  advanced_track_manager.hpp  audio_recording_system.hpp  daw-interface.css  daw-interface.js  debug.html  enhanced_cpp_daw_engine.cpp  enhanced_cpp_daw_engine.js  enhanced_cpp_daw_engine.wasm  enhanced_daw_interface.js  package-lock.json  package.json  reaper_style_daw_interface.js  start-daw.sh  test_fixed.html  web_browser_daw.html  websocket-bridge.js
cpp-daw/include/: AudioBuffer.hpp  Clip.hpp  DAWEngine.hpp  FXPlugin.hpp  FXPlugin_new.hpp  Track.hpp  Transport.hpp  WebAudioHandler.hpp
cpp-daw/plugins/: BasicFX.hpp  BasicFX_fixed.cpp  BasicFX_old.cpp
cpp-daw/src/: AudioBuffer.cpp  Clip.cpp  DAWEngine.cpp  DAWEngine_fixed.cpp  DAWEngine_old.cpp  Track.cpp  main.cpp
cpp-daw/tests/: test_main.cpp
reaper-web/js/: reaper_web_post.js  reaper_web_pre.js
reaper-web/src/core/: reaper_engine.cpp  reaper_engine.hpp
reaper-web/src/wasm/: simple_reaper_interface.cpp
reaper-web/ui/: ReaVerse.html  test-wasm.html
reaper-web/ui/js/: reaper-audio-processor.js  reaper-engine.js
wasm-tests/: index.html  verify_setup.sh  wasm_server.py
wasm-tests/cpp-example/: index.html
wasm-tests/rust-example/: index.html
